kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend
  namespace: servicepulse

spec:
  replicas: 1

  selector:
    matchLabels:
      app: frontend

  template:
    metadata:
      labels:
        app: frontend

    spec:
      containers:
      - name: frontend

        image: vlikitha/smart-incident-frontend:v1

        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 80
